--- a/rulerheightpicker/build.gradle
+++ b/rulerheightpicker/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: 'com.android.library'
-group = 'com.github.aerocube-technologies'
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
+}
+
 
 android {
     compileSdk 31
@@ -29,4 +32,17 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+}
+
+afterEvaluate {
+    publishing{
+        publications{
+            release(MavenPublication){
+                from components.release
+                groupId='com.github.aerocube-technologies'
+                artifactId='ruler-height-picker'
+                version='1.0.0'
+            }
+        }
+    }
 }
